[tool.poetry]
name = "virttop"
version = "0.1.1"
description = "A top like utility for libvirt"
authors = ["terminaldweller <devi@terminaldweller.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/terminaldweller/virttop"
repository = "https://github.com/terminaldweller/virttop"
keywords = ["libvirt","top"]
classifiers = [
    "Environment :: Console",
]
include = [
    "LICENSE",
]
packages = [
{include = "virttop"}
]

[tool.poetry.scripts]
virttop = "virttop.virttop:main"

[tool.poetry.dependencies]
python = "^3.11"
libvirt-python = "^9.0.0"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
